--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_ID=24817837
-API_HASH=acd9f0cc6beb08ce59383cf250052686
-BOT_TOKEN=7606613494:AAHc-vHZ0fW4PKHuIeIATWRwfEX63NsAGGY
+API_ID=
+API_HASH=
+BOT_TOKEN=
 OWNER_ID=7428552084
 PORT=8080
